--- a/plots.ipynb
+++ b/plots.ipynb
@@ -130,38 +130,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def plot_obs_rr_across_buckets(dataset, n_trials=10000):\n",
-    "#   \"\"\"\n",
-    "#   Plot observed risk reduction\n",
-    "#   \"\"\"\n",
-    "#   buckets, types, risk_reductions, lengths = [], [], [], []\n",
-    "#   for bucket in [NOEFF_ASSIGNMENT, BENEFIT_ASSIGNMENT]:\n",
-    "#     buckets += [bucket] * n_trials\n",
-    "#     types += [\"ml\"] * n_trials\n",
-    "#     risk_reductions += arrs_ml[dataset][bucket]\n",
-    "#     lengths.append(np.sum(buckets_ml[dataset] == bucket))\n",
-    "#   for bucket in [NOEFF_ASSIGNMENT, BENEFIT_ASSIGNMENT]:\n",
-    "#     buckets += [bucket] * n_trials\n",
-    "#     types += [\"conv\"] * n_trials\n",
-    "#     risk_reductions += arrs_conv[dataset][bucket]\n",
-    "#     lengths.append(np.sum(buckets_conv[dataset] == bucket))\n",
-    "#   plt.figure(figsize=(6, 4))\n",
-    "#   sns.boxplot(x=buckets, y=risk_reductions, hue=types, palette=\"deep\",\n",
-    "#               showfliers=False)\n",
-    "#   xtick_labels = [\"No benefit (N={}/{})\".format(lengths[0], lengths[2]),\n",
-    "#                   \"Benefit (N={}/{})\".format(lengths[1], lengths[3])]\n",
-    "#   plt.xticks(np.arange(2), xtick_labels)\n",
-    "#   plt.axhline(y=0.0, linestyle=\"--\", color=\"grey\")\n",
-    "#   plt.title(\"{}: observed risk reduction across predicted buckets\".format(dataset.upper()))\n",
-    "#   plt.savefig(\"./img/{}_obs_rr_across_buckets.pdf\".format(dataset))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {
     "scrolled": true
@@ -446,37 +414,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def plot_predicted_rr_conv():\n",
-    "#   plt.figure(figsize=(8, 4))\n",
-    "#   pred_rr_sprint = pred_rr_conv[\"sprint\"]\n",
-    "#   low, high = np.percentile(pred_rr_sprint, 1), np.percentile(pred_rr_sprint, 99)\n",
-    "#   plt.hist(pred_rr_sprint[np.logical_and(low < pred_rr_sprint, high > pred_rr_sprint)], \n",
-    "#            bins=30, normed=True, alpha=0.5, label=\"SPRINT\", edgecolor=\"none\",\n",
-    "#            color=plt_colors[5])\n",
-    "#   pred_rr_accord = pred_rr_conv[\"accord\"]\n",
-    "#   low, high = np.percentile(pred_rr_accord, 2.5), np.percentile(pred_rr_accord, 97.5)\n",
-    "#   plt.hist(pred_rr_accord[np.logical_and(low < pred_rr_accord, high > pred_rr_accord)], \n",
-    "#            bins=30, normed=True, alpha=0.5, label=\"ACCORD\", edgecolor=\"none\",\n",
-    "#            color=plt_colors[2])\n",
-    "#   pred_rr_accord = pred_rr_conv[\"combined\"]\n",
-    "#   low, high = np.percentile(pred_rr_accord, 2.5), np.percentile(pred_rr_accord, 97.5)\n",
-    "#   plt.hist(pred_rr_accord[np.logical_and(low < pred_rr_accord, high > pred_rr_accord)], \n",
-    "#            bins=30, normed=True, alpha=0.5, label=\"COMBINED\", edgecolor=\"none\",\n",
-    "#            color=plt_colors[3])\n",
-    "#   plt.ylabel(\"Density\")\n",
-    "#   plt.xlabel(\"Predicted absolute risk reduction\")\n",
-    "#   plt.title(\"Conventional: Distributions of predicted absolute risk reduction\")\n",
-    "#   plt.xlim([-0.2,0.2])\n",
-    "#   plt.savefig(\"./img/conv_pred_rr_distributions.pdf\")\n",
-    "#   plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {
     "collapsed": true
@@ -664,7 +601,7 @@
     }
    ],
    "source": [
-    "plot_matching_patient_pairs(\"sprint\")"
+    "plot_matching_patient_pairs(\"combined\")"
    ]
   },
   {
