--- a/paper/plots.ipynb
+++ b/paper/plots.ipynb
@@ -7,7 +7,18 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "%config InlineBackend.figure_format = 'retina'"
+    "%config InlineBackend.figure_format = 'retina'\n",
+    "%cd .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"src/\")"
    ]
   },
   {
@@ -19,9 +30,9 @@
     "import numpy as np\n",
     "import scipy.stats as stats\n",
     "import matplotlib as mpl\n",
-    "from dataloader import load_data\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from dataloader import load_data\n",
     "from evaluate import *"
    ]
   },
@@ -58,17 +69,8 @@
    "source": [
     "buckets_ml, buckets_conv, arrs_ml, arrs_conv = {}, {}, {}, {}\n",
     "pvals_ml, pvals_conv = {}, {}\n",
-    "cox = {}\n",
     "framingham = {}\n",
-    "ascvd = {}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "ascvd = {}\n",
     "pred_rr_ml = {}\n",
     "pred_rr_conv = {}"
    ]
@@ -87,7 +89,6 @@
     "  t[dataset] = np.load(\"results/xlearner/%s/t.npy\" % dataset)\n",
     "  cens[dataset] = np.load(\"results/xlearner/%s/cens.npy\" % dataset)\n",
     "  \n",
-    "  cox[dataset] = np.load(\"results/baselines/%s/coxph.npy\" % dataset)\n",
     "  framingham[dataset] = np.load(\"results/baselines/%s/framingham.npy\" % dataset)\n",
     "  ascvd[dataset] = np.load(\"results/baselines/%s/ascvd.npy\" % dataset)\n",
     "  \n",
@@ -192,7 +193,7 @@
     "  plt.xlim([-0.08, 0.16])\n",
     "  plt.ylim([-5.9,0.5])\n",
     "  plt.axvline(x=0.0, linestyle=\"--\", color=\"grey\")\n",
-    "  plt.savefig(\"./img/{}_forest_plot.pdf\".format(dataset))"
+    "  plt.savefig(\"./paper/img/{}_forest_plot.pdf\".format(dataset))"
    ]
   },
   {
@@ -201,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "forest_plot(\"combined\")"
+    "forest_plot(\"sprint\")"
    ]
   },
   {
@@ -245,7 +246,7 @@
     "  plt.ylabel(\"Observed ARR\")\n",
     "  plt.text(-0.12, 0.15, \"Slope: {:.2f}, Intercept: {:.2f}\".format(slope, intercept))\n",
     "  plt.plot((-0.3,0.3), (-0.3, 0.3), \"--\", color=\"grey\")\n",
-    "  plt.savefig(\"./img/{}_calibration_curve_by_pred_risk.pdf\".format(dataset))"
+    "  plt.savefig(\"./paper/img/{}_calibration_curve_by_pred_risk.pdf\".format(dataset))"
    ]
   },
   {
@@ -277,7 +278,7 @@
     "  plt.ylabel(\"Predicted ARR\")\n",
     "  plt.xlabel(\"Baseline Risk Decile\")\n",
     "  plt.ylim((-0.15, 0.20))\n",
-    "  plt.savefig(\"./img/{}_pred_rr_baseline_decile.pdf\".format(dataset))"
+    "  plt.savefig(\"./paper/img/{}_pred_rr_baseline_decile.pdf\".format(dataset))"
    ]
   },
   {
@@ -329,7 +330,7 @@
     "  plt.xlabel(\"Predicted absolute risk reduction\")\n",
     "  plt.xlim([-0.15, 0.15])\n",
     "  plt.legend()\n",
-    "  plt.savefig(\"./img/{}_pred_rr_distributions.pdf\".format(dataset))"
+    "  plt.savefig(\"./paper/img/{}_pred_rr_distributions.pdf\".format(dataset))"
    ]
   },
   {
@@ -437,7 +438,7 @@
     "  plt.title(\"Conventional\", fontsize=12, fontweight=\"bold\")\n",
     "  plt.ylim(-0.3, 0.3)\n",
     "  plt.xlim(-0.3, 0.3)\n",
-    "  plt.savefig(\"./img/{}_matching_patient_pairs.pdf\".format(dataset))"
+    "  plt.savefig(\"./paper/img/{}_matching_patient_pairs.pdf\".format(dataset))"
    ]
   },
   {
