--- a/paper/plots.ipynb
+++ b/paper/plots.ipynb
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "buckets_ml, buckets_conv, arrs_ml, arrs_conv = {}, {}, {}, {}\n",
+    "arrs_ml, arrs_conv = {}, {}\n",
     "pvals_ml, pvals_conv = {}, {}\n",
     "framingham = {}\n",
     "ascvd = {}\n",
@@ -95,12 +95,10 @@
     "  pred_rr_ml[dataset] = np.load(\"results/xlearner/%s/pred_rr.npy\" % dataset)\n",
     "  pred_rr_conv[dataset] = np.load(\"results/logreg/%s/pred_rr.npy\" % dataset)\n",
     "  \n",
-    "  buckets_ml[dataset] = np.load(\"results/xlearner/%s/buckets.npy\" % dataset)\n",
     "  arrs_ml[dataset] = np.load(\"results/xlearner/%s/arrs.npy\" % dataset).item()\n",
-    "  pvals_ml[dataset] = np.load(\"results/xlearner/%s/pvals.npy\" % dataset)\n",
-    "  buckets_conv[dataset] = np.load(\"results/logreg/%s/buckets.npy\" % dataset)\n",
+    "  pvals_ml[dataset] = np.load(\"results/xlearner/%s/pvals.npy\" % dataset).item()\n",
     "  arrs_conv[dataset] = np.load(\"results/logreg/%s/arrs.npy\" % dataset).item()\n",
-    "  pvals_conv[dataset] = np.load(\"results/logreg/%s/pvals.npy\" % dataset)"
+    "  pvals_conv[dataset] = np.load(\"results/logreg/%s/pvals.npy\" % dataset).item()"
    ]
   },
   {
@@ -110,7 +108,7 @@
    "outputs": [],
    "source": [
     "def calc_corr_in_pred_rr(dataset):\n",
-    "  print(stats.pearsonr(pred_rr_ml[dataset], pred_rr_conv[dataset]))"
+    "  print(f\"Correlation: {stats.pearsonr(pred_rr_ml[dataset], pred_rr_conv[dataset])[0]:.2f}\")"
    ]
   },
   {
@@ -125,26 +123,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pvals_ml[\"combined\"][]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "def forest_plot(dataset):\n",
-    "  n_trials = len(arrs_ml[dataset][BENEFIT_ASSIGNMENT])\n",
+    "  n_trials = len(arrs_ml[dataset][1])\n",
     "  buckets, risk_reductions, lengths = [], [], []\n",
     "  buckets += [1] * n_trials\n",
-    "  risk_reductions += arrs_ml[dataset][BENEFIT_ASSIGNMENT]\n",
-    "  lengths.append(np.sum(buckets_ml[dataset] == BENEFIT_ASSIGNMENT))\n",
+    "  risk_reductions += arrs_ml[dataset][1]\n",
+    "  lengths.append(np.sum(pred_rr_ml[dataset] > 0))\n",
     "  buckets += [2] * n_trials\n",
-    "  risk_reductions += arrs_conv[dataset][BENEFIT_ASSIGNMENT]\n",
-    "  lengths.append(np.sum(buckets_conv[dataset] == BENEFIT_ASSIGNMENT))\n",
+    "  risk_reductions += arrs_conv[dataset][1]\n",
+    "  lengths.append(np.sum(pred_rr_conv[dataset] > 0))\n",
     "  buckets += [4] * n_trials\n",
-    "  risk_reductions += arrs_ml[dataset][NO_BENEFIT_ASSIGNMENT]\n",
-    "  lengths.append(np.sum(buckets_ml[dataset] == NO_BENEFIT_ASSIGNMENT))\n",
+    "  risk_reductions += arrs_ml[dataset][-1]\n",
+    "  lengths.append(np.sum(pred_rr_ml[dataset] <= 0))\n",
     "  buckets += [5] * n_trials\n",
-    "  risk_reductions += arrs_conv[dataset][NO_BENEFIT_ASSIGNMENT]\n",
-    "  lengths.append(np.sum(buckets_conv[dataset] == NO_BENEFIT_ASSIGNMENT))\n",
+    "  risk_reductions += arrs_conv[dataset][-1]\n",
+    "  lengths.append(np.sum(pred_rr_conv[dataset] <= 0))\n",
     "  buckets = np.array(buckets)\n",
     "  risk_reductions = np.array(risk_reductions)\n",
     "  ytick_labels = [\n",
@@ -157,10 +164,10 @@
     "  ytick_locs = [-0, -1,-1.5,-3,-4,-4.5]\n",
     "  fig = plt.figure(figsize=(12, 4), tight_layout=True)\n",
     "  pvals = {\n",
-    "    1: pvals_ml[dataset][0],\n",
-    "    2: pvals_conv[dataset][0],\n",
-    "    4: pvals_ml[dataset][1],\n",
-    "    5: pvals_conv[dataset][1]\n",
+    "    1: pvals_ml[dataset][1],\n",
+    "    2: pvals_conv[dataset][1],\n",
+    "    4: pvals_ml[dataset][-1],\n",
+    "    5: pvals_conv[dataset][-1]\n",
     "  }\n",
     "  minsofar, maxsofar = 0, 0\n",
     "  for i, b in enumerate([1,2,4,5]):\n",
@@ -202,7 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "forest_plot(\"sprint\")"
+    "forest_plot(\"combined\")"
    ]
   },
   {
@@ -214,11 +221,11 @@
     "def plot_expected_vs_obs_rr(dataset, n_bins=5, cens_time=365.25 * 3, bin_strategy=\"rr\"):\n",
     "  plt.figure(figsize=(12, 4))\n",
     "  plt.subplot(1,2,1)\n",
-    "  rss, slope, intercept, pred_rr, obs_rr, = calibration(pred_rr_ml[dataset], \n",
-    "                                                        y[dataset],\n",
-    "                                                        w[dataset], \n",
-    "                                                        t[dataset],\n",
-    "                                                        cens_time, n_bins=n_bins)\n",
+    "  slope, intercept, pred_rr, obs_rr, = calibration(pred_rr_ml[dataset], \n",
+    "                                                   y[dataset],\n",
+    "                                                   w[dataset], \n",
+    "                                                   t[dataset],\n",
+    "                                                   cens_time, n_bins=n_bins)\n",
     "  plt.scatter(pred_rr, obs_rr, alpha=0.5, color=plt_colors[0])\n",
     "  abline_values = [slope * i + intercept for i in [-0.15, 0.25]]\n",
     "  plt.plot([-0.15, 0.25], abline_values, '--', color=plt_colors[0])\n",
@@ -230,12 +237,11 @@
     "  plt.ylabel(\"Observed ARR\")\n",
     "  plt.plot((-0.3,0.3), (-0.3, 0.3), \"--\", color=\"grey\")\n",
     "  plt.subplot(1,2,2)\n",
-    "  rss, slope, intercept, pred_rr, obs_rr, = calibration(pred_rr_conv[dataset], \n",
-    "                                                        y[dataset],\n",
-    "                                                        w[dataset], \n",
-    "                                                        t[dataset],\n",
-    "                                                        cens_time, n_bins=n_bins)\n",
-    "  rss = np.sum((np.array(obs_rr) - np.array(pred_rr)) ** 2)\n",
+    "  slope, intercept, pred_rr, obs_rr, = calibration(pred_rr_conv[dataset], \n",
+    "                                                   y[dataset],\n",
+    "                                                   w[dataset], \n",
+    "                                                   t[dataset],\n",
+    "                                                   cens_time, n_bins=n_bins)\n",
     "  plt.scatter(pred_rr, obs_rr, alpha=0.5, color=plt_colors[1])\n",
     "  abline_values = [slope * i + intercept for i in [-0.15, 0.25]]\n",
     "  plt.plot([-0.15, 0.25], abline_values, '--', color=plt_colors[1])\n",
@@ -379,7 +385,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calculate_summary_stats(\"combined\", bucket=True)"
+    "calculate_summary_stats(\"combined\", bucket=False)"
    ]
   },
   {
@@ -428,7 +434,7 @@
     "    untreated = random.sample(untreated, len(treated))\n",
     "  if len(untreated) < len(treated):\n",
     "    treated = random.sample(treated, len(untreated))\n",
-    "  assert len(untreated) == len(treated)\n",
+    "  assert len(untreated) == len(treated) \n",
     "  untreated = sorted(untreated, key=lambda t: t[0])\n",
     "  treated = sorted(treated, key=lambda t: t[0])\n",
     "  plt.scatter(np.array(treated)[:,0], np.array(untreated)[:,0], marker=\".\", alpha=2e-3, color=plt_colors[1])\n",
